fix weird horizontal scroll and adjust colours theme

--- a/src/components/sections/Contact/Contact.module.scss
+++ b/src/components/sections/Contact/Contact.module.scss
@@ -6,7 +6,7 @@
     gap: 20px;
     padding: 32px;
     border-radius: 10px;
-    background: var(--mantine-color-g-dark-1);
+    background: var(--mantine-color-g-dark-2);
 
     label {
         margin-bottom: 8px;
